--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 
+/*kontener na zawartosc calego kodu*/
 .contener{
     width: 100%;
     height: 100vh;
@@ -14,21 +15,23 @@
     justify-content: center;
 }
 
+/* klasa kalkulatora */
 .calculator{
 background: #3a4452;
 padding: 20px;
 border-radius: 10px;
 }
 
+/*klalkulator przyciski */
 .calculator form input{
 border: 0;
 outline: 0;
 width: 60px;
-height:60px ;
-box-shadow: 10px;
-border-radius:-8px -8px 15px rgba(255,255,255,0.1) ,5px 5px 15px rgba(0,0,0,0.2);
+height: 60px ;
+border-radius: 10px;
+box-shadow: -8px -8px 15px rgba(255,255,255,0.1) ,5px 5px 15px rgba(0,0,0,0.2);
 background: transparent;
-font-size: 20px;
+font-size: 20px; 
 color:#fff;
 cursor: pointer;
 margin:10px ;
@@ -40,19 +43,19 @@ form .display{
     margin: 20px 0;
 
 }
-
+/*okno kalkulatora*/
 form .display input{
 text-align: right;
 flex: 1;
 font-size: 45px;
 box-shadow: none;
 }
-
+/*przycisk = */
 form input.equal{
 width:145px ;
 
 }
-
+/*przyciski oprucz liczb*/
 form input.operator{
     color: seashell;
 }
