--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .contener{
     width: 100%;
     height: 100vh;
-    background: #e3f9ff;
+    background: #e4dcb2;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,7 +29,7 @@ outline: 0;
 width: 60px;
 height: 60px ;
 border-radius: 10px;
-box-shadow: -8px -8px 15px rgba(255,255,255,0.1) ,5px 5px 15px rgba(0,0,0,0.2);
+box-shadow: -8px ,-8px ,15px rgba(255,255,255,0.1) ,5px 5px 15px rgba(0,0,0,0.2);
 background: transparent;
 font-size: 20px; 
 color:#fff;
